--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -23,6 +23,12 @@ jobs:
       with:
         python-version: '3.10'
     
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+    
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -30,7 +36,6 @@ jobs:
           git \
           zip \
           unzip \
-          openjdk-17-jdk \
           autoconf \
           libtool \
           pkg-config \
@@ -61,9 +66,11 @@ jobs:
     
     - name: Build APK
       run: |
+        export JAVA_HOME=$JAVA_HOME_17_X64
         buildozer -v android debug
       env:
         BUILDOZER_WARN_ON_ROOT: 0
+        GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=false"
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
